--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,33 @@ html {
   background-image: radial-gradient(white, grey);
   padding: 25px;
 }
+#content{
+  background-color: white;
+}
+.loader {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -20px;
+  margin-top: -20px;
+}
+.hidden {
+  display: none;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .heading {
   font-family: 'Times New Roman', Times, serif;
 }
